# barn-bookmark-manager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY  copy-url.sh
cmake/: add-sources.cmake  bbm-add_sources.cmake  bbm-fetch_sources.cmake  bbm_add_sources.cmake  bbm_fetch_sources.cmake  download-dependencies.cmake  fetch-sources.cmake
doc/: bookmark-manager-ideas.md  django-bookmarks-todo.md
include/: BBMAddSettings.hpp  BBMFetchSettings.hpp  add.hpp  add_dialogs.hpp  add_settings.hpp  bookmark.hpp  cli.hpp  datetime.hpp  fetch.hpp  fetch_dialogs.hpp  fetch_settings.hpp  log.hpp  scrape.hpp  settings.hpp  settings_util.hpp  util.hpp  version_info.hpp  x11.hpp  x_app.hpp  x_copy_paste.hpp
scripts/: apply-clang-format.sh  build-and-run.sh  build.sh  check-clang-format.sh  clean.sh  configure-and-build.sh  configure-build-and-run.sh  install-requirements-ubuntu.sh
src/: BBMAddSettings.cpp  BBMFetchSettings.cpp  add-main.cpp  add.cpp  add_dialogs.cpp  add_settings.cpp  cli.cpp  datetime.cpp  fetch-main.cpp  fetch.cpp  fetch_dialogs.cpp  fetch_settings.cpp  log.cpp  main.cpp  main_add.cpp  main_fetch.cpp  scrape.cpp  settings.cpp  settings_util.cpp  util.cpp  x11.cpp  x_app.cpp  x_copy_paste.cpp
templates/: version_info.cpp.in  version_info.hpp.in
